Tiedostojen muuttaminen tietokannoiksi, lajin ja paikan luominen

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 /laskarit/viikko2/Unicafe/target/
 /Project/target/
 /Project/nbproject/
-/Project/observations.txt
-/Project/users.txt
+/Project/observation.db
+/Project/user.db
