--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>javafx-controls</artifactId>
             <version>12.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.8.11</version>
+        </dependency>
     </dependencies>
     
     <build>
@@ -104,7 +109,12 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>     
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sql-maven-plugin</artifactId>
+                <version>3.0.0-SNAPSHOT</version>
+            </plugin>  
         </plugins>     
     </build>
 </project>
