--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.8.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
     
     <build>
